--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,13 +134,13 @@ jobs:
           benchmark_bulk_xt,
           compose_extrinsic_offline,
           custom_nonce,
-          event_callback,
-          event_error_details,
+          check_extrinsic_events,
           get_account_identity,
           get_blocks_async,
           get_storage,
           print_metadata,
           staking_batch_payout,
+          subscribe_events,
           sudo,
           transfer_with_tungstenite_client,
           transfer_with_ws_client,
