Update parity scale dependencies (#687)
* update scale

* taplo fmt

--- a/node-api/Cargo.toml
+++ b/node-api/Cargo.toml
@@ -18,9 +18,10 @@ frame-metadata = { version = "16.0", default-features = false, features = ["curr
 hex = { version = "0.4.3", default-features = false }
 log = { version = "0.4.14", default-features = false }
 scale-bits = { version = "0.4.0", default-features = false, features = ["scale-info", "serde"] }
-scale-decode = { version = "0.8.0", default-features = false, features = ["primitive-types", "derive"] }
-scale-encode = { version = "0.4.0", default-features = false, features = ["bits", "primitive-types", "derive"] }
+scale-decode = { version = "0.10.0", default-features = false, features = ["primitive-types", "derive"] }
+scale-encode = { version = "0.5.0", default-features = false, features = ["bits", "primitive-types", "derive"] }
 scale-info = { version = "2.0.1", features = ["derive", "decode", "bitvec"], default-features = false }
+scale-value = { version = "0.13.0", default-features = false }
 serde = { version = "1.0.136", features = ["derive"], default-features = false }
 serde_json = { version = "1.0.79", default-features = false, features = ["alloc"] }
 
