Update to polkadot release v1.4.0 commit (#695)
* update to polkadot release v1.4.0

* allow gpl licence for now

--- a/about.toml
+++ b/about.toml
@@ -10,6 +10,7 @@ accepted = [
     "OpenSSL",
     "Unicode-DFS-2016",
     "NOASSERTION",
+    "GPL-3.0"
 ]
 ignore-dev-dependencies = true
 ignore-build-dependencies = true
