Remove sync api jsonrpsee (#699)
* it's compiling

fix tests

update ci

cargo fmt

fix compile error

fix clippy

remove compile error and ensure jsonrpsee is only exported when not sync api

clean up dependencies

move keystore_tests.rs to sync examples

update .lock

remove unneeded deps

clean up sync example toml

clean up async example toml

remove sync part from async exmaple

speed up example

add box around dynamic error values

readd spacing

use async code smart

speed up example

make author_test actually async

add sleep

add some sleeps to avoid future error

remove obsolete async naming

update README

update README

update CI

* simplify author_test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,19 +54,19 @@ jobs:
                 # Test for 32 bit and wasm32-unknown-unknown compatibility
                 cargo build --target wasm32-unknown-unknown --no-default-features --features sync-api,
 
-                # Test for async compilation
-                cargo build --no-default-features --features "std jsonrpsee-client",
-                # Compile async examples separately to enable async-mode
-                cargo build --release -p ac-examples --example get_blocks_async --no-default-features,
-                cargo build --release -p ac-examples --example runtime_update_async --no-default-features,
+                # Compile examples and integration test separately to ensure features are not cross-imported
+                cargo test --release -p ac-examples-async,
+                cargo test --release -p ac-examples-sync,
+                cargo test --release -p ac-testing-async,
+                cargo test --release -p ac-testing-sync,
 
                 # Clippy
                 cargo clippy -- -D warnings,
                 cargo clippy --no-default-features -- -D warnings,
                 cargo clippy --all-features --examples -- -D warnings,
 
-                # Run tests and build examples
-                cargo test --release --workspace --all-features --exclude test-no-std,
+                # Run unit tests
+                cargo test --release,
 
                 # Fmt
                 cargo fmt --all -- --check
@@ -148,7 +148,7 @@ jobs:
           custom_nonce,
           check_extrinsic_events,
           get_account_identity,
-          get_blocks_async,
+          get_blocks,
           get_storage,
           print_metadata,
           staking_batch_payout,
