Update rust-toolchain and dependencies (#715)
* update rust-toolchain, cargo update and env-logger

* fix compilation

* update keystore

* fix clippy

* change to first februrary

* fix clippy

* add rustup component add

* Update to newest Substrate commit (#711)

* this works

* update to newest substrate commit

* update bip39

* update cfg-if

* update toolchain and cargo update

* fix update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: init-rust-target
-        run: rustup show
+        run: rustup show && rustup component add rust-src
 
       - uses: Swatinem/rust-cache@v2
         with:
