--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,10 +163,11 @@ jobs:
           keystore_tests,
           pallet_balances_tests,
           pallet_transaction_payment_tests,
-          state_tests,
+          runtime_api_tests,
           tungstenite_client_test,
           ws_client_test,
           state_tests,
+          query_runtime_api,
           runtime_update_sync,
           runtime_update_async,
         ]
