--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
                 cargo clippy --all-features --examples -- -D warnings,
 
                 # Run unit tests
-                cargo test --release,
+                cargo test --release --all-features --workspace --exclude test-no-std --exclude "ac-examples-*" --exclude "ac-testing-*",
 
                 # Fmt
                 cargo fmt --all -- --check
