--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,6 +160,7 @@ jobs:
           chain_tests,
           dispatch_errors_tests,
           frame_system_tests,
+          jsonrpsee_tests,
           keystore_tests,
           pallet_balances_tests,
           pallet_transaction_payment_tests,
