Update contracts extrinsic (#737)
* add some renaming

* update contracts module and add to ci

* remove comment

* add missing files

* move example to tests

* fix compilation error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,6 +184,7 @@ jobs:
           jsonrpsee_tests,
           keystore_tests,
           pallet_balances_tests,
+          pallet_contract_tests,
           pallet_transaction_payment_tests,
           runtime_api_tests,
           tungstenite_client_test,
