Add Unicode-3.0 to accpeted licences (#815)
* add Unicode-3.0 to accpeted licence

* Add chaos licenses

* remove unknown license

* remove unknonw licenses

* revert prev commit

* test with workarounds

* remove rustls from workarounds

--- a/about.toml
+++ b/about.toml
@@ -9,8 +9,12 @@ accepted = [
     "ISC",
     "OpenSSL",
     "Unicode-DFS-2016",
+    "Unicode-3.0",
     "NOASSERTION",
     "GPL-3.0"
 ]
 ignore-dev-dependencies = true
 ignore-build-dependencies = true
+workarounds = [
+    "ring",
+]
