--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,14 @@ env:
 jobs:
   cancel_previous_runs:
     name: Cancel Previous Runs
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: styfle/cancel-workflow-action@0.12.1
         with:
           access_token: ${{ secrets.GITHUB_TOKEN }}
 
   free-disk-space:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: Free Disk Space (Ubuntu)
       uses: jlumbroso/free-disk-space@main
@@ -42,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-22.04 ]
+        os: [ ubuntu-latest ]
         check: [
                 # Test for no-std compatibility.
                 # `--locked` to enforce an up-to-date Cargo.lock
@@ -96,6 +96,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: init-rust-target
         run: rustup show && rustup component add rust-src
+
+      - name: Install gcc-multilib for wasmi compilation
+        run: sudo apt install gcc-multilib
 
       - name: Cargo update
         if: ${{ github.event_name == 'schedule' }}
@@ -166,7 +169,7 @@ jobs:
 
   taplo-fmt:
     name: "Taplo fmt"
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container: "tamasfe/taplo:latest"
     steps:
       - uses: actions/checkout@v4
@@ -176,7 +179,7 @@ jobs:
 
   license-check:
     name: "License check"
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -202,7 +205,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-22.04 ]
+        os: [ ubuntu-latest ]
         example: [
           benchmark_bulk_xt,
           compose_extrinsic,
@@ -263,7 +266,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-22.04 ]
+        os: [ ubuntu-latest ]
         example: [
           wasm_example,
         ]
@@ -283,7 +286,7 @@ jobs:
         run: wasmtime --invoke main ${{ matrix.example }}.wasm 0 0
 
   merge:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs: [examples, wasm_examples]
     steps:
       - name: Merge Artifacts
