--- a/examples/async/Cargo.toml
+++ b/examples/async/Cargo.toml
@@ -27,4 +27,4 @@ sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = 
 sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "../..", version = "1.16", features = ["staking-xt", "contracts-xt", "disable-metadata-hash-check"] }
+substrate-api-client = { path = "../..", version = "1.16", features = ["staking-xt", "contracts-xt"] }
