--- a/testing/sync/Cargo.toml
+++ b/testing/sync/Cargo.toml
@@ -12,5 +12,5 @@ sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "ma
 sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "../..", version = "1.16", default-features = false, features = ["tungstenite-client", "ws-client", "disable-metadata-hash-check"] }
+substrate-api-client = { path = "../..", version = "1.16", default-features = false, features = ["tungstenite-client", "ws-client"] }
 ac-keystore = { path = "../../keystore", version = "1.16" }
