--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -38,7 +38,6 @@ pallet-staking = { optional = true, git = "https://github.com/paritytech/polkado
 
 [dev-dependencies]
 frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
-solochain-template-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 
@@ -58,6 +57,7 @@ std = [
     "sp-core/std",
     "sp-crypto-hashing/std",
     "sp-runtime/std",
+    "sp-runtime-interface/std",
     "sp-staking/std",
     "sp-version/std",
     "sp-weights/std",
