Update .toml dependencies (#826)
* move UncheckedExtrinsicV4 to seperate file

* add and rename TransactionExtension

* clean up clippy deprecated warnings

* cargo update

* fix tests and clippy

* revert Ubuntu-latest commit

* remvoe ubuntu-latest change

* remove change ubuntu-latest

* upgrade to ubuntu latest

* update libraries

* fix taplo

* fix tungestenite client

* update keystore

* fix tests

* update cargo.lock

* fix rebase error

* add mssing line

* cargo update

* udpate dervive_more to 2.0

* fix derive_more

* update dev docs

* update tomls according to new dev rules

* update async-trait

* update parity-scale-codec

* CI: only install gcc-multilib for wasm32-wasip1

* cargo update

* add Zlib to accepted licenses

* CI: add sudo apt update

* fix sudo spelling

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,8 @@ jobs:
         run: rustup show && rustup component add rust-src
 
       - name: Install gcc-multilib for wasmi compilation
-        run: sudo apt install gcc-multilib
+        run: sudo apt update && sudo apt install gcc-multilib
+        if: contains(matrix.check, 'wasm32-wasip1')
 
       - name: Cargo update
         if: ${{ github.event_name == 'schedule' }}
